# ChangeLog for dev-python/piddle
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/piddle/ChangeLog,v 1.11 2009/02/15 22:34:30 patrick Exp $

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> piddle-1.0.15.ebuild:
  Adding ~amd64 keyword

  27 Oct 2008; Ali Polatel <hawking@gentoo.org> piddle-1.0.15.ebuild:
  Use distutils.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> piddle-1.0.15.ebuild:
  Mark 1.0.15 stable on ia64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> piddle-1.0.15.ebuild:
  Mark 1.0.15 ~ia64

  19 Nov 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
  Added japanese metadata.xml translation thanks to Yoshino-san.

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  22 Jul 2004; Rob Cakebread <pythonhead@gentoo.org> piddle-1.0.15.ebuild:
  Stable on x86

  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> piddle-1.0.15.ebuild:
  Remove default S.

*piddle-1.0.15 (30 Sep 2003)

  30 Sep 2003; Karl Trygve Kalleberg <karltk@gentoo.org> piddle-1.0.5.ebuild:
  Initial import. 

  "A python module providing a cross-platform and cross-media drawing
  toolkit. It handles lines, polygons, curves, figures, and
  text--powerful enough for professional plotting--including support for
  wxWindows, Tk, Quickdraw, PDF, Postscript, and PIL."
  