@@ -1,4 +1,4 @@
 DIST piddle-1.0.15.tar.gz 454044 RMD160 26661e1bdf90b6791a8e3baa24269bd54cab039f SHA1 9cfed569c2baba3ad4c5f73ad51de514e58a3d31 SHA256 84c33ba0d054e6b585005aae3a4a99aa5e0d735798fb015c220c24a548d1364d
-EBUILD piddle-1.0.15.ebuild 538 RMD160 7bfa6fc2bfef695c8e7e98a5e430d3b298630ea1 SHA1 cc331ec000b3f8811854d6886de040c3b30f4530 SHA256 af06b7cd288c9f70bb6a60adda17f85321c0e5f36e95e41afcfa74462afe260d
-MISC ChangeLog 1402 RMD160 29205b09265fab25498225825cb21f82a3389713 SHA1 37198fd77e112bab9cac3768a086fa9aeeb9e5d0 SHA256 3e6aa319d67c336201dd9f5eccf435d6238a78aa0341b0124a1b35fa5ac52197
+EBUILD piddle-1.0.15.ebuild 599 RMD160 559ac04a88a3588b19cfdd72907be2ee3396df25 SHA1 8f11aa71b5f766411fb563432ed8526c6d8dcfbf SHA256 f0e482004cba94cfa9222eefc696c910d1fdf1b224e955d79ad2ec30831b5dd9
+MISC ChangeLog 1528 RMD160 6aa031f5c2c877459f94914cd51631cc52bcec4b SHA1 b415d60c1aee1d622572b05c210efd27b8e9721b SHA256 bf8a3b4766fb9ea141671ccd99b3c189ea261d7e3fe6b235bd470e7fb58fd69a
 MISC metadata.xml 1723 RMD160 e717acb638493833cd9fae354c745d7017ad2c96 SHA1 e45096c1d515419eec180cc9a4bb7b150b91b114 SHA256 4673fd080af0e85f768e487850474d816229d37d7ce08286a2adbc72ae5af322
